Fixed height issue and sidebar visibility issue

--- a/themes/mongodb/static/src/css/mongodb-docs.css
+++ b/themes/mongodb/static/src/css/mongodb-docs.css
@@ -721,6 +721,7 @@ div.versionadded > p > span, div.versionchanged > p > span, div.deprecated > p >
     display: flex;
     justify-content: center;
     margin: 94px auto 0;
+    height: 100vh;
 }
 
 .content .main-column {
@@ -1048,18 +1049,20 @@ div.sphinxsidebar h3 a.showlink {
 .sphinxsidebarwrapper > ul > .toctree-l1 {
     padding: 6px 0;
     line-height: 24px;
-}
-
-.sphinxsidebarwrapper > ul > .toctree-l1.current {
-    background-color: #fff;
-    border-right: 1px solid #f5f6f7;
-}
+ }
 
 .sphinxsidebarwrapper li.toctree-l1 ul > li > a {
     line-height: 24px;
     display: inline-block;
     width: 100%;
 }
+
+.sphinxsidebarwrapper li.toctree-l1 ul > li > a:active {
+    color: #7fc857;
+}
+/* .sphinxsidebarwrapper > ul > .toctree-l1:last-child {
+    border-bottom: 1px solid #ebebed;
+} */
 
 .version-toggle {
     font-size: 12px;
